<resources>
    <string name="app_name">AndroidShowcase</string>
    <string name="API_key">7A9ego6wJIQTIzMu5zRiFEUA3zDrdgUaVAqdbPFe</string>

    <string-array name="rest_request_types">
        <item>GET</item>
        <item>POST</item>
        <item>PUT</item>
        <item>DELETE</item>
    </string-array>

    <string name="title_activity_realm">RealmActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">example@gmail.com</string>
    <string name="login_name">Login Name</string>
    <string name="login_pass">Password</string>
    <string name="hint_pass">************</string>
    <string name="button_login">Login</string>
    <string name="login_remember_me">Remember Me</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="confirm_password">Confirm password</string>
    <string name="passwords_match">Passwords Match!</string>
    <string name="passwords_dont_match">Passwords don\'t match!</string>
    <string name="passwords_empty">Please fill in passwords</string>
</resources>
