<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="loginViewModel"
            type="com.example.tim.androidshowcase.Login.LoginViewModel"/>
    </data>

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".login.LoginActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="@dimen/text_size_large"
            android:gravity="center_horizontal"
            tools:ignore="SpUsage" />

        <LinearLayout
            android:id="@+id/layoutSignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/email"/>

            <EditText
                android:id="@+id/editTextLoginName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@{loginViewModel.loginName}"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/buttonSignUpEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutSignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_pass"/>

            <EditText
                android:id="@+id/editTextLoginPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/hint_pass"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/buttonSignUpPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutSignUpPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/confirm_password"/>

            <EditText
                android:id="@+id/editTextLoginPassConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:hint="@string/hint_pass"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/buttonSignUpPasswordConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_gravity="end"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutSignUpFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/textViewPasswordCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/passwords_match"/>

            <Button
                android:id="@+id/buttonSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:paddingLeft="@dimen/text_size_large"
                android:paddingRight="@dimen/text_size_large"
                android:textSize="@dimen/text_size_medium"
                tools:ignore="SpUsage" />
        </LinearLayout>

    </LinearLayout>
</layout>
